public class PizzaCustomStyleBrest extends Pizza {
    public PizzaCustomStyleBrest(){

    }
}
