public class PizzaSavoyardeStyleBrest extends Pizza {
    public PizzaSavoyardeStyleBrest(){

    }
}
