public class PizzaSavoyardeStyleStrasbourg extends Pizza {
    public PizzaSavoyardeStyleStrasbourg(){

    }
}
