@startuml

title __JAVA's Class Diagram__\n


    class FabriquePizzaBrest {
        {static} - uniqueInstance : FabriquePizzaBrest
        {static} + creerPizza()
        {static} + getInstance()
        - FabriquePizzaBrest()
    }

  


    class FabriquePizzaStrasbourg {
        {static} - uniqueInstance : FabriquePizzaStrasbourg
        {static} + creerPizza()
        {static} + getInstance()
        - FabriquePizzaStrasbourg()
    }

  


    abstract class Pizza {
        - garnitures : ArrayList<String>
        - nom : String
        - pate : String
        - sauce : String
        + couper()
        + cuire()
        + emballer()
        + getNom()
        + preparer()
    }

  


    class PizzaCustomStyleBrest {
        + PizzaCustomStyleBrest()
    }

  


    class PizzaCustomStyleStrasbourg {
        + PizzaCustomStyleStrasbourg()
    }

  


    abstract class PizzaFabrique {
        {static} + creerPizza()
    }

  


    class PizzaFromageStyleBrest {
        + PizzaFromageStyleBrest()
    }

  


    class PizzaFromageStyleStrasbourg {
        + PizzaFromageStyleStrasbourg()
    }

  


    class PizzaSavoyardeStyleBrest {
        + PizzaSavoyardeStyleBrest()
    }

  


    class PizzaSavoyardeStyleStrasbourg {
        + PizzaSavoyardeStyleStrasbourg()
    }

  


    abstract class Pizzeria {
        + commanderPizza()
    }

  


    class PizzeriaBrest {
        + PizzeriaBrest()
    }

  


    class PizzeriaFabrique {
        {static} - uniqueInstance : PizzeriaFabrique
        + creerPizzeria()
        {static} + getInstance()
        - PizzeriaFabrique()
    }

  

    class PizzeriaStrasbourg {
        + PizzeriaStrasbourg()
    }

  

  FabriquePizzaBrest -up-|> PizzaFabrique
  FabriquePizzaStrasbourg -up-|> PizzaFabrique
  PizzaCustomStyleBrest -up-|> Pizza
  PizzaCustomStyleStrasbourg -up-|> Pizza
  PizzaFromageStyleBrest -up-|> Pizza
  PizzaFromageStyleStrasbourg -up-|> Pizza
  PizzaSavoyardeStyleBrest -up-|> Pizza
  PizzaSavoyardeStyleStrasbourg -up-|> Pizza
  PizzeriaBrest -up-|> Pizzeria
  PizzeriaStrasbourg -up-|> Pizzeria


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
